--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,16 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.5</h2>
+        <p class="releas5date">2023/05/22</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>fitting with Gson-2.10.x, reflection headache #75</li>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.2.4</h2>
         <p class="releas5date">2022/05/08</p>
         <div class="new">
