add model for RemoteApiGen committers

--- a/web/ja/lastaflute/howto/architecture/remoteapicall.html
+++ b/web/ja/lastaflute/howto/architecture/remoteapicall.html
@@ -60,7 +60,7 @@
 		<dt>リモートAPIルールの設定</dt><dd>データ変換の仕方や、接続にまつわるオプションなどのルールを設定</dd>
 		<dt>デフォルト＆メソッドごと</dt><dd>ルールをBehaviorごとにデフォルト設定、個別のメソッドごとに変更可能</dd>
 	</dl>
-<pre><span class="codetitle">e.g. set h2 to database settings @databaseInfoMap.dfprop</span><code>
+<pre><span class="codetitle">e.g. set h2 to database settings @model</span><code>
  +---------------------+       +----------------+       +-------------+
  | LastaRemoteBehavior |  -->  | LastaRemoteApi |  -->  | HTTP Client |
  +---------------------+       +----------------+       +-------------+
