about removing waste in legacy GEF for ERFlute on Eclipse-202306

--- a/web/ja/manual/function/helper/erflute/index.html
+++ b/web/ja/manual/function/helper/erflute/index.html
@@ -171,7 +171,8 @@
 	</p>
 	<ol>
 		<li>Eclipseのメニューの <em class="mark">Help - Install New Software...</em> を選択</li>
-		<li>GEF-Legacy の更新サイトのURLを <em class="mark">Work with:</em> に入力して、GEFにチェックを付ける</li>
+		<li>GEF-Legacy の更新サイトのURLを <em class="mark">Work with:</em> に入力</li>
+		<li>GEFの内訳から <em class="keyword">Draw2d と Zest を除外</em> <span class="frm">(202306にて除外しないとインストールエラーを確認)</span></li>
 		<li>Next, Next でインストール (Eclipseの再起動を求められるので再起動)</li>
 	</ol>
 	<dl class="textlist">
@@ -183,6 +184,9 @@
 	</p>
 	<p class="imgbox">図 : Eclipseの更新サイトによるインストールのURL入力
 		<a href="../../../../../data/snapshot/helper/erflute/erflute-install-supplement-updatesite-url-snapshot.png" title="Eclipseの更新サイトによるインストールのURL入力"><img src="../../../../../data/snapshot/helper/erflute/erflute-install-supplement-updatesite-url-snapshot.png" alt="Eclipseの更新サイトによるインストールのURL入力" width="550" height="360" /></a>
+	</p>
+	<p class="imgbox">図 : GEFの内訳を選択 (Draw2d と Zest を除外)
+		<a href="../../../../../data/snapshot/helper/erflute/erflute-install-supplement-updatesite-waste-snapshot.png" title="GEFの内訳を選択"><img src="../../../../../data/snapshot/helper/erflute/erflute-install-supplement-updatesite-waste-snapshot.png" alt="GEFの内訳を選択" width="550" height="300" /></a>
 	</p>
 
 	<h2 id="howto">ERFluteの使い方</h2>
